--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "next": "12.1.4",
-    "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-yandex-maps": "^4.6.0"
   },
   "devDependencies": {
     "eslint": "8.12.0",
